welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: Missing closing brace `}' assumed here
move(nbPas: Int = 1,versLAvant: Boolean) = {
^