welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
move(nbPas: Int = 1,versLAvant: Boolean) = {
	if (versLAvant){
	return nbPas;
}
